--- a/due-processed/.stylelintrc.json
+++ b/due-processed/.stylelintrc.json
@@ -1,16 +1,13 @@
 {
-    "extends": [
-        "stylelint-config-wordpress/scss"
-    ],
-    "ignoreFiles": [
-        "sass/_normalize.scss"
-    ],
-    "rules": {
-        "font-family-no-missing-generic-family-keyword": null,
-        "no-descending-specificity": null,
-        "block-no-empty": null,
-        "no-duplicate-selectors": null,
-        "font-family-no-duplicate-names": null,
-        "selector-class-pattern": null
-    }
+  "extends": ["stylelint-config-wordpress/scss"],
+  "ignoreFiles": ["sass/_normalize.scss"],
+  "rules": {
+    "font-family-no-missing-generic-family-keyword": null,
+    "no-descending-specificity": null,
+    "block-no-empty": null,
+    "no-duplicate-selectors": null,
+    "font-family-no-duplicate-names": null,
+    "selector-class-pattern": null,
+    "at-rule-empty-line-before": null
+  }
 }
