add base layouts and styles (#3)
add base layouts for header, footer, search, home, and overall site

--- a/due-processed/.stylelintrc.json
+++ b/due-processed/.stylelintrc.json
@@ -8,6 +8,8 @@
     "no-duplicate-selectors": null,
     "font-family-no-duplicate-names": null,
     "selector-class-pattern": null,
-    "at-rule-empty-line-before": null
+    "at-rule-empty-line-before": null,
+    "rule-empty-line-before": null,
+    "declaration-colon-newline-after": null
   }
 }
