--- a/due-processed/.stylelintrc.json
+++ b/due-processed/.stylelintrc.json
@@ -10,6 +10,7 @@
     "selector-class-pattern": null,
     "at-rule-empty-line-before": null,
     "rule-empty-line-before": null,
-    "declaration-colon-newline-after": null
+    "declaration-colon-newline-after": null,
+    "declaration-property-unit-whitelist": null
   }
 }
