--- a/due-processed/composer.json
+++ b/due-processed/composer.json
@@ -14,8 +14,22 @@
       "homepage": "https://github.com/Automattic/_s/graphs/contributors"
     }
   ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "wpackagist-plugin/akismet": "^4.1",
+    "wpackagist-plugin/amp": "^2.0",
+    "wpackagist-plugin/coblocks": "^2.5",
+    "wpackagist-plugin/crowdsignal-forms": "^1.1",
+    "wpackagist-plugin/gutenberg": "^9.4",
+    "wpackagist-plugin/layout-grid": "^1.3",
+    "wpackagist-plugin/page-optimize": "^0.5",
+    "wpackagist-plugin/full-site-editing": "^2.7"
   },
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
