--- a/due-processed/composer.json
+++ b/due-processed/composer.json
@@ -21,7 +21,7 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=7.3",
     "wpackagist-plugin/akismet": "^4.1",
     "wpackagist-plugin/amp": "^2.0",
     "wpackagist-plugin/coblocks": "^2.5",
@@ -30,6 +30,7 @@
     "wpackagist-plugin/layout-grid": "^1.3",
     "wpackagist-plugin/page-optimize": "^0.5",
     "wpackagist-plugin/full-site-editing": "^2.7",
+    "wpackagist-plugin/frontend-uploader": "^1.3",
     "htmlburger/carbon-fields": "^3.2"
   },
   "require-dev": {
