updated readme with regards to plugins

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ wp-content/themes/*
 !wp-content/themes/due-processed
 due-processed/vendor/*
 wp-content/plugins/*
+wp-content/cache/*
 due-processed.zip
