--- a/due-processed/.stylelintrc.json
+++ b/due-processed/.stylelintrc.json
@@ -11,6 +11,7 @@
     "at-rule-empty-line-before": null,
     "rule-empty-line-before": null,
     "declaration-colon-newline-after": null,
-    "declaration-property-unit-whitelist": null
+	"declaration-property-unit-whitelist": null,
+	"declaration-block-no-duplicate-properties": null
   }
 }
