--- a/due-processed/package.json
+++ b/due-processed/package.json
@@ -36,6 +36,7 @@
     "map": false
   },
   "scripts": {
+    "start": "docker-compose up",
     "dev": "npm install && composer install && npm run watch",
     "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
     "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
