--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,35 @@
 version: '3'
 services:
-   db:
-     image: mysql:5.7
-     volumes:
-       - due_processed_db_data:/var/lib/mysql
-       - ./sql-dumps:/docker-entrypoint-initdb.d
-     restart: always
-     ports:
-       - '3307:3306'
-     environment:
-       MYSQL_ROOT_PASSWORD: password
-       MYSQL_DATABASE: wordpress
-       MYSQL_USER: user
-       MYSQL_PASSWORD: password
-   wordpress:
-     depends_on:
-       - db
-     image: wordpress:latest
-     ports:
-       - "8000:80"
-     restart: always
-     volumes:
-       - ./wp-content/:/var/www/html/wp-content 
-       # https://stackoverflow.com/a/54013100/339698
-       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini 
-       - ./due-processed/:/var/www/html/wp-content/themes/due-processed
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: user
-       WORDPRESS_DB_PASSWORD: password
+  db:
+    image: mysql:5.7
+    volumes:
+      - due_processed_db_data:/var/lib/mysql
+      - ./sql-dumps:/docker-entrypoint-initdb.d
+    restart: always
+    ports:
+      - '3307:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+  wordpress:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    ports:
+      - "8000:80"
+    restart: always
+    volumes:
+      - ./wp-content/:/var/www/html/wp-content 
+      # https://stackoverflow.com/a/54013100/339698
+      - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini 
+      - ./due-processed/:/var/www/html/wp-content/themes/due-processed
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: user
+      WORDPRESS_DB_PASSWORD: password
 volumes:
     due_processed_db_data:
